--- a/app/views/themes/bioart/admin/partners/index.html.haml
+++ b/app/views/themes/bioart/admin/partners/index.html.haml
@@ -1,18 +1,25 @@
 .row
   .small-12.columns
-    %h1 Project partners
+    %h1 Funders and partners
 
     %table
       %thead
         %tr
+          %th Logo
           %th Name
           %th Website
           %th Projects
           %th Actions
-      
+
       %tbody
         - @admin_partners.each do |admin_partner|
           %tr
+            %td
+              - if admin_partner.hmlogo?
+                = image_tag admin_partner.hmlogo.url(:thumb)
+                %br/
+              - if admin_partner.logo?
+                = image_tag admin_partner.logo.url(:standard)
             %td= admin_partner.name
             %td= link_to admin_partner.website, admin_partner.website, target: :_blank
             %td
