--- a/app/assets/themes/hybrid_matters/stylesheets/foundation_and_overrides-old.scss
+++ b/app/assets/themes/hybrid_matters/stylesheets/foundation_and_overrides-old.scss
@@ -1,5 +1,5 @@
 
-@import 'foundation-datepicker';
+@import 'foundation-datetimepicker';
 // Foundation by ZURB
 // foundation.zurb.com
 // Licensed under MIT Open Source
