--- a/app/assets/themes/bioart/stylesheets/application.css.scss
+++ b/app/assets/themes/bioart/stylesheets/application.css.scss
@@ -63,9 +63,9 @@ button.slick-arrow {
 //    right: 1rem;
 //  }
 }
-.slick-prev:before, .slick-next:before { font-family: sans-serif; font-size: 3em; font-weight: 100; line-height: 1; 
-  color: black !important; opacity: 1; 
-  -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }   
+.slick-prev:before, .slick-next:before { font-family: sans-serif; font-size: 3em; font-weight: 100; line-height: 1;
+  color: black !important; opacity: 1;
+  -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 
 .slick-prev:before { content: "◀"; }
 [dir="rtl"] .slick-prev:before { content: "▶"; }
@@ -73,3 +73,26 @@ button.slick-arrow {
 [dir="rtl"] .slick-next { left: -10px; top: 70px; right: auto; }
 .slick-next:before { content: "▶"; }
 [dir="rtl"] .slick-next:before { content: "◀"; }
+
+
+.calendar {
+  width: 85%;
+  left: -85%;
+  position: fixed;
+  z-index: 899;
+  opacity: 0.95;
+  background-color: $headerblue;
+  background: asset-url("bioart/images/layout/menu_dot.png") repeat;
+  padding: 1.5rem;
+  .calendar_tab {
+    border-radius: 0px 0px 30px 0px;
+    padding: 0.75rem;
+    font-size: 2.15rem;
+    left: 100%;
+    a { color: black; }
+    position: absolute;
+    background-color: $headerblue;
+    background: asset-url("bioart/images/layout/menu_dot.png") repeat;
+    margin: -24px 0 0 0;
+  }
+}
