--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -2,7 +2,7 @@
 @import '_settings';
 
 header {
-  
+
   .login_options {
     float: right;
     position: absolute;
@@ -35,13 +35,13 @@ header {
         height: 2.75rem;
         padding-left: 20px;
         background:  asset-url("bioart/images/layout/mag_glass.png") no-repeat 2px center  #66ffcc;
-        &::-webkit-input-placeholder {font-family: $titillium; color: #000; text-transform: uppercase; 
-         
+        &::-webkit-input-placeholder {font-family: $titillium; color: #000; text-transform: uppercase;
+
         }
-        &::-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase;} 
+        &::-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase;}
         &:-ms-input-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
         &:input:-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
-        
+
       }
     }
     .search_icon {
@@ -60,7 +60,7 @@ header {
         line-height: 1em;
         font-weight: 600;
         color: black;
-        img { 
+        img {
           float: left;
           margin-left: 10px;
         }
@@ -83,7 +83,7 @@ header {
       @include breakpoint(small only) {
         padding: 0;
       }
-      li {  
+      li {
         vertical-align: bottom;
         @include breakpoint(small only) {
           display: inline;
@@ -111,13 +111,13 @@ header {
               height: 2.75rem;
               padding-left: 20px;
               background:  asset-url("bioart/images/layout/mag_glass.png") no-repeat 2px center  #66ffcc;
-              &::-webkit-input-placeholder {font-family: $titillium; color: #000; text-transform: uppercase; 
-               
+              &::-webkit-input-placeholder {font-family: $titillium; color: #000; text-transform: uppercase;
+
               }
-              &::-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase;} 
+              &::-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase;}
               &:-ms-input-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
               &:input:-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
-              
+
             }
            }
         }
@@ -134,13 +134,23 @@ header {
           }
 
         }
+
         a {
           color: #FFF;
-          background: black asset-url("bioart/images/layout/menubar_arrow.png")  0.4em no-repeat;
+          background: black;
 
           padding: 1em 0.7em 1em 2em;
           margin-right: 0.5em;
           font-size: 0.933rem;
+          &.calendar_menu {
+            padding: 0.75rem;
+            text-align: center;
+            background-image: none;
+            i {
+              margin-right: 0;
+              font-size: 1.25rem;
+            }
+          }
           @include breakpoint(small only) {
             font-size: 0.8rem;
           }
@@ -153,11 +163,11 @@ header {
           }
         }
       }
-      
-      
+
+
     }
   }
-  
+
 }
 
 #flash {
@@ -198,7 +208,7 @@ header {
       }
     }
   }
-  
+
   a.related {
     .related_image {
       overflow: hidden;
@@ -254,7 +264,7 @@ footer {
       font-size: 1.125rem;
     }
   }
-  
+
   .privacy {
     text-align: right;
     a {
