--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -78,6 +78,7 @@
                   -# %ul.menu
                   -# %li= link_to 'Activities', activities_path
                 %li= link_to 'About', '/about'
+                %li= link_to fa_icon("calendar"), '#', onclick: 'javascript:toggleCalendar();return false;', class: :calendar_menu
                 %li.search.hide-for-small-only
                   = form_tag '/search' do
                     = text_field_tag :searchterm, params[:searchterm], placeholder: 'Search', style: @project.nil? ? '' : "background: #{asset_url('bioart/images/layout/mag_glass.png')} no-repeat 2px center  #{@project.custom_background_colour.blank? ? '#66ffcc' : @project.custom_background_colour};"
@@ -91,13 +92,10 @@
                 = content_tag :div, msg, :id => "flash_#{name}"
     .calendar#calendar_container
       #calendar
-
-      .calendar_tab
-        = link_to fa_icon("calendar"), '#', onclick: 'javascript:toggleCalendar();return false;'
     #container= yield
     %footer{style: @project.nil? ? '' : (@project.custom_background_image? ? "background: url(#{@project.custom_background_image.url}) repeat;" : false) }= render partial: 'layouts/footer'
 
     :javascript
       $(document).ready(function() { #{yield :jquery}
-        $.getScript("calendar.js");
+        $.getScript("/calendar.js");
       });
