--- a/app/views/themes/bioart/home/home.html.haml
+++ b/app/views/themes/bioart/home/home.html.haml
@@ -1,22 +1,22 @@
-- @frontitems.each do |frontitem|
-  = render partial: 'frontitem', locals: {frontitem: frontitem}
-  
-  
+- @frontitems.each_with_index do |frontitem, index|
+  = render partial: 'frontitem', locals: {frontitem: frontitem, index: index}
+
+
 = render partial: 'whatsnew'
 
 
 
-- unless @ars.nil?
-  = render partial: 'ars_bioarctica'
-  
-  
-- unless @projects.empty?
+-# - unless @ars.nil?
+-#   = render partial: 'ars_bioarctica'
 
-  = render partial: 'projects'
-  
-- unless @activities.empty?
-  = render partial: 'activities'
-  
-= render partial: 'about'
-  
-= render partial: 'contact'
+
+-# - unless @projects.empty?
+
+-#   = render partial: 'projects'
+
+-# - unless @activities.empty?
+-#   = render partial: 'activities'
+
+-# = render partial: 'about'
+
+-# = render partial: 'contact'
