--- a/app/views/themes/bioart/admin/projects/_form.html.haml
+++ b/app/views/themes/bioart/admin/projects/_form.html.haml
@@ -17,10 +17,12 @@
   .small-10.medium-6.columns
     = f.text_area :description
   .small-10.medium-6.columns
-    = f.input :image
-  
+    = f.input :short_abstract, as: :ckeditor, input_html: {required: ''}, label: 'Short abstract to display in index view:'
   .small-10.medium-6.columns
-    = f.input :has_groups, as: :boolean  
+    = f.input :image
+
+  .small-10.medium-6.columns
+    = f.input :has_groups, as: :boolean
   .small-10.medium-6.columns
     = f.input :custom_background_colour, input_html: {class: :colour_picker}, label: 'Custom colour for header/footer'
   .small-10.medium-6.columns
@@ -32,7 +34,7 @@
         = f.check_box :remove_custom_background_image
         Remove custom header/footer background image
     = f.input :custom_background_image, label: 'Custom background image for header/footer'
-    
+
   .small-10.medium-6.columns
     - if f.object.custom_body_background_image?
       =image_tag f.object.custom_body_background_image.url
@@ -50,7 +52,7 @@
   .small-12.large-8.columns= f.input :tags, hint: 'Separate with commas'
   - unless f.object.new_record?
     - if f.object.slug != 'ars-bioarctica'
-      .small-12.large-8.columns= f.input :artists, label: 'Artists involved in this project?', hint: 'Choose as many as necessary.', input_html: {class: :chosen_select} 
+      .small-12.large-8.columns= f.input :artists, label: 'Artists involved in this project?', hint: 'Choose as many as necessary.', input_html: {class: :chosen_select}
   .small-10.medium-6.columns
     = f.input :redirect_url
   .row
@@ -62,4 +64,3 @@
     $('.colour_picker').spectrum({showInput: true,
     allowEmpty:true,
     preferredFormat: "hex"});
-    
