--- a/app/views/themes/bioart/posts/index.html.haml
+++ b/app/views/themes/bioart/posts/index.html.haml
@@ -14,7 +14,7 @@
   - elsif @category
     .row
       .small-10.small-centered.medium-12.columns.section_title
-        %h1.project_title News
+        %h1.project_title What's New
         - if @category
           %h3.project_subtitle= @category.name
   - else
