--- a/app/assets/themes/bioart/stylesheets/activities.css.scss
+++ b/app/assets/themes/bioart/stylesheets/activities.css.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 @import '_settings';
 
-.activities_index {
+.activities_index, .projects_index {
   padding: 3rem 0;
   background: #FFF asset-url("bioart/images/layout/grey_dots_small.png") repeat;
 
@@ -20,12 +20,12 @@
     padding: 0.25rem 0.5rem;
     position: absolute;
   }
-  a.activity {
+  a.activity, a.project {
     color: black;
     &:hover {
       color: #666;
     }
-    .activity_image {
+    .activity_image , .project_image {
       overflow: hidden;
       height: 320px;
       .hashtag {
@@ -38,7 +38,7 @@
         padding: 0.5em 0.313em;
       }
     }
-    .activity_content {
+    .activity_content, .project_content {
       padding: 1.875em 2.625em;
       background-color: white;
       margin-bottom: 2.2rem;
@@ -56,8 +56,8 @@
         line-height: 1.25em;
       }
     }
-  }  
-  
+  }
+
 }
 
 
@@ -77,7 +77,7 @@
       padding: 0.5em 0.313em;
       position: absolute;
       top: 23%;
-      
+
     }
   }
   .activity_content {
