--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -70,13 +70,13 @@
           .title-bar.large-9.columns.small-12.medium-12
             .title-bar-left
               %ul.horizontal.menu.dropdown{:'data-dropdown-menu' => ''}
-                %li= link_to 'News', posts_path
-
-                %li= link_to 'Residency', project_path('ars-bioarctica')
+                %li= link_to 'Events', events_path
                 %li
-                  = link_to 'Program', '/program'
-                  -# %ul.menu
-                  -# %li= link_to 'Activities', activities_path
+                  = link_to 'Projects', '/projects'
+                %li= link_to 'Residency', project_path('ars-bioarctica')
+
+                -# %ul.menu
+                -# %li= link_to 'Activities', activities_path
                 %li= link_to 'About', '/about'
                 %li= link_to fa_icon("calendar"), '#', onclick: 'javascript:toggleCalendar();return false;', class: :calendar_menu
                 %li.search.hide-for-small-only
