--- a/app/views/themes/bioart/projects/index.html.haml
+++ b/app/views/themes/bioart/projects/index.html.haml
@@ -5,19 +5,19 @@
         .heading
           %span.featured Ongoing
           Projects
-          
-    - @ongoing.each do |project|
-      - next if project.slug == 'ars-bioarctica'
-      = link_to project, class: [:project] do
-        .row[project]
-          .small-12.columns
-            .row.inner
-              .small-12.large-2.hide-for-medium-only.project_icon.columns
-                = image_tag project.image.url(:box).gsub(/development/, 'production')
-              .small-12.medium-12.large-10.project_content.columns
-                .title= project.name
-                .years= project.year_range
-                .description= project.description
+    .row.small-up-1.medium-up-2.large-up-3= render partial: 'project', locals: { projects: @ongoing }
+    -# - @ongoing.each do |project|
+    -#   -# - next if project.slug == 'ars-bioarctica'
+    -#   = link_to project, class: [:project] do
+    -#     .row[project]
+    -#       .small-12.columns
+    -#         .row.inner
+    -#           .small-12.large-2.hide-for-medium-only.project_icon.columns
+    -#             = image_tag project.image.url(:box).gsub(/development/, 'production')
+    -#           .small-12.medium-12.large-10.project_content.columns
+    -#             .title= project.name
+    -#             .years= project.year_range
+    -#             .description= project.description
 
   - unless @old.empty?
     .row
@@ -25,15 +25,16 @@
         .heading
           Past
           Projects
-    .row.projects_container
-      .small-12.columns
-        - @old.each do |project|
-          .row
-            = link_to project, class: [:columns, 'small-12', :project] do
-              .row.inner
-                .small-12.large-2.hide-for-medium-only.project_icon.columns
-                  = image_tag project.image.url(:box).gsub(/development/, 'production')
-                .small-12.medium-12.large-10.project_content.columns
-                  .title= project.name
-                  .years= project.year_range
-                  .description= project.description
+    .row.small-up-1.medium-up-2.large-up-3= render partial: 'project', locals: { projects: @old.sort_by(&:year_range).reverse }
+    -# .row.projects_container
+    -#   .small-12.columns
+    -#     - @old.each do |project|
+    -#       .row
+    -#         = link_to project, class: [:columns, 'small-12', :project] do
+    -#           .row.inner
+    -#             .small-12.large-2.hide-for-medium-only.project_icon.columns
+    -#               = image_tag project.image.url(:box).gsub(/development/, 'production')
+    -#             .small-12.medium-12.large-10.project_content.columns
+    -#               .title= project.name
+    -#               .years= project.year_range
+    -#               .description= project.description
