reconfigure top bar entirely with mobile burger menu

--- a/app/assets/themes/bioart/stylesheets/application.css.scss
+++ b/app/assets/themes/bioart/stylesheets/application.css.scss
@@ -18,6 +18,7 @@
  *= require bioart/stylesheets/opencall
  *= require bioart/stylesheets/projects
  *= require bioart/stylesheets/activities
+ *= require bioart/stylesheets/mobile
  *= require bioart/stylesheets/posts
  *= require bioart/stylesheets/searches
  *= require bioart/stylesheets/residencies
