--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -13,161 +13,171 @@ header {
       font-size: 1rem;
     }
   }
-  background-color: $headerblue;
-  .pattern {
-    background: asset-url("bioart/images/layout/menu_dot.png") repeat;
-    max-height: 11.25em;
-    padding: 3.125em 0;
-    @include breakpoint(small only) {
-      padding: 0.25rem 0 0;
-    }
-    @include breakpoint(medium only) {
-      padding: 0.25rem 0 0;
-    }
-    .search_field {
-      display: none;
-      input[type=text] {
-        float: left;
-        outline: none;
-        box-shadow: none;
-        font-family: $titillium;
-        border: none;
-        height: 2.75rem;
-        padding-left: 20px;
-        background:  asset-url("bioart/images/layout/mag_glass.png") no-repeat 2px center  #66ffcc;
-        &::-webkit-input-placeholder {font-family: $titillium; color: #000; text-transform: uppercase;
+  background: $headerblue asset-url("bioart/images/layout/menu_dot.png") repeat;
+  max-height: 11.25em;
+  padding: 1rem 0;
 
-        }
-        &::-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase;}
-        &:-ms-input-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
-        &:input:-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
-
-      }
-    }
-    .search_icon {
+  .title-bar {
+    button.menu-icon {
       position: absolute;
-      top: 3px;
-      right: 3px;
-      a i {
-        font-size: 1.5rem;
-        color: black;
+      top: 32px;
+      right: 5px;
+      &::after {
+        background: black;
+        box-shadow: 0 7px 0 #000, 0 14px 0 #000;
       }
     }
-    a {
-      .logo {
-        font-family: $rubik;
-        font-size: 3.081em;
-        line-height: 1em;
-        font-weight: 600;
-        color: black;
-        img {
-          float: left;
-          margin-left: 10px;
-        }
-        .title {
-          float: left;
-          padding-top: 60px;
-          font-family: $rubik;
-          font-size: 2.5rem;
-          line-height: 1em;
-          font-weight: 600;
-          color: black;
-        }
+  }
+  .top-bar {
+    background: none;
+  }
+  .search_field {
+    display: none;
+    input[type=text] {
+      float: left;
+      outline: none;
+      box-shadow: none;
+      font-family: $titillium;
+      border: none;
+      height: 2.75rem;
+      padding-left: 20px;
+      background:  asset-url("bioart/images/layout/mag_glass.png") no-repeat 2px center  #66ffcc;
+      &::-webkit-input-placeholder {font-family: $titillium; color: #000; text-transform: uppercase;
+
       }
-    }
-    ul.menu {
-      padding: 2.1em 0 0 0;
-      @include breakpoint(medium only) {
-        padding: 0;
-      }
-      @include breakpoint(small only) {
-        padding: 0;
-      }
-      li {
-        vertical-align: bottom;
-        @include breakpoint(small only) {
-          display: inline;
-          float: left;
-          margin-bottom: 1rem;
-        }
-        ul.submenu {
-          background: transparent;
-          border: 0;
-          padding-top: 7px;
-        }
-        &.search {
-          width: 20%;
-          @include breakpoint(small only) {
-            width: 40%;
-          }
-          form {
-
-            input[type=text] {
-              float: left;
-              outline: none;
-              box-shadow: none;
-              font-family: $titillium;
-              border: none;
-              height: 2.75rem;
-              padding-left: 20px;
-              background:  asset-url("bioart/images/layout/mag_glass.png") no-repeat 2px center  #66ffcc;
-              &::-webkit-input-placeholder {font-family: $titillium; color: #000; text-transform: uppercase;
-
-              }
-              &::-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase;}
-              &:-ms-input-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
-              &:input:-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
-
-            }
-           }
-        }
-        font-family: $titillium;
-        padding: 0 0 0 0.15em;
-        font-weight: 600;
-        &.is-active {
-          ul.submenu {
-            li.is-submenu-item {
-              a:hover {
-                color: white;;
-              }
-            }
-          }
-
-        }
-
-        a {
-          color: #FFF;
-          background: black;
-
-          padding: 1em 0.7em 1em 2em;
-          margin-right: 0.5em;
-          font-size: 0.933rem;
-          &.calendar_menu {
-            padding: 0.75rem;
-            text-align: center;
-            background-image: none;
-            i {
-              margin-right: 0;
-              font-size: 1.25rem;
-            }
-          }
-          @include breakpoint(small only) {
-            font-size: 0.8rem;
-          }
-          text-transform: uppercase;
-        }
-
-        &:hover {
-          a {
-            color: $fuschia;
-          }
-        }
-      }
-
+      &::-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase;}
+      &:-ms-input-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
+      &:input:-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
 
     }
   }
+  .search_icon {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    a i {
+      font-size: 1.5rem;
+      color: black;
+    }
+  }
+  a {
+    .logo {
+      font-family: $rubik;
+      font-size: 3.081em;
+      line-height: 1em;
+      font-weight: 600;
+      color: black;
+      img {
+        float: left;
+        margin-left: 10px;
+      }
+      .title {
+        float: left;
+        padding-top: 60px;
+        font-family: $rubik;
+        font-size: 2.5rem;
+        line-height: 1em;
+        font-weight: 600;
+        color: black;
+      }
+    }
+  }
+  ul.menu {
+    background: none;
 
+    @include breakpoint(medium only) {
+      padding: 0;
+    }
+    @include breakpoint(small only) {
+      padding: 0;
+    }
+    li {
+      vertical-align: middle;
+      @include breakpoint(small only) {
+        display: inline;
+        float: left;
+        margin-bottom: 1rem;
+      }
+      ul.submenu {
+        background: transparent;
+        border: 0;
+        padding-top: 7px;
+      }
+      &.search {
+        width: 20%;
+        @include breakpoint(small only) {
+          width: 40%;
+        }
+        form {
+
+          input[type=text] {
+            float: left;
+            outline: none;
+            box-shadow: none;
+            font-family: $titillium;
+            border: none;
+            height: 2.75rem;
+            padding-left: 20px;
+            background:  asset-url("bioart/images/layout/mag_glass.png") no-repeat 2px center  #66ffcc;
+            &::-webkit-input-placeholder {font-family: $titillium; color: #000; text-transform: uppercase;
+
+            }
+            &::-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase;}
+            &:-ms-input-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
+            &:input:-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
+
+          }
+         }
+      }
+      font-family: $titillium;
+      padding: 0 0 0 0.15em;
+      font-weight: 600;
+      &.is-active {
+        ul.submenu {
+          li.is-submenu-item {
+            a:hover {
+              color: white;;
+            }
+          }
+        }
+
+      }
+
+      &.menu-text {
+        max-width: 250px;
+        a {
+          background: none;
+        }
+      }
+      a {
+        color: #FFF;
+        background: black;
+
+        padding: 1em 0.7em 1em 2em;
+        margin-right: 0.5em;
+        font-size: 0.933rem;
+        &.calendar_menu {
+          padding: 0.75rem;
+          text-align: center;
+          background-image: none;
+          i {
+            margin-right: 0;
+            font-size: 1.25rem;
+          }
+        }
+        @include breakpoint(small only) {
+          font-size: 0.8rem;
+        }
+        text-transform: uppercase;
+      }
+
+      &:hover {
+        a {
+          color: $fuschia;
+        }
+      }
+    }
+  }
 }
 
 #flash {
