--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -49,40 +49,36 @@
       ga('create', 'UA-60278881-1', 'auto');
       ga('send', 'pageview');
   %body
-    %header{style: @project.nil? ? '' : "background-color: #{@project.custom_background_colour}"}
-      .pattern{class: @project.nil? ? false : @project.slug, style: @project.nil? ? '' : (@project.custom_background_image? ? "background: url(#{@project.custom_background_image.url}) repeat;" : false)}
+    %header{class: @project.nil? ? false : @project.slug, style: @project.nil? ? false : (@project.custom_background_image? ? "background: " + (@project.nil? ? '' : @project.custom_background_colour) +  " url(#{@project.custom_background_image.url}) repeat;" : false)}
 
-        .row.search_field#search_field_container
-          = form_tag '/search' do
-            = text_field_tag :searchterm, params[:searchterm], placeholder: 'Search', style: @project.nil? ? '' : "background: #{asset_url('bioart/images/layout/mag_glass.png')} no-repeat 2px center  #{@project.custom_background_colour.blank? ? '#66ffcc' : @project.custom_background_colour};"
-        .row
-          - if user_signed_in?
-            .login_options
-              = link_to fa_icon('pencil'), '/admin'
-              = link_to fa_icon('sign-out'), destroy_user_session_path, :method => :delete
-          = link_to '/' do
-            .logo.medium-3.columns.small-12
-              -# BIOART SOCIETY
-              = image_tag asset_url('bioart/images/solu_bioart.png')
+      .row.search_field#search_field_container
+        = form_tag '/search' do
+          = text_field_tag :searchterm, params[:searchterm], placeholder: 'Search', style: @project.nil? ? '' : "background: #{asset_url('bioart/images/layout/mag_glass.png')} no-repeat 2px center  #{@project.custom_background_colour.blank? ? '#66ffcc' : @project.custom_background_colour};"
+      .row
+        .columns.small-6.medium-4.hide-for-large.logo= link_to image_tag(asset_url('bioart/images/solu_bioart.png')), '/'
+        - if user_signed_in?
+          .login_options
+            = link_to fa_icon('pencil'), '/admin'
+            = link_to fa_icon('sign-out'), destroy_user_session_path, :method => :delete
 
-            .search_icon.show-for-small-only
-              = link_to fa_icon('search'), '#', onclick: '$("#search_field_container").slideToggle();$(".search_icon").fadeOut();'
-          .title-bar.large-9.columns.small-12.medium-12
-            .title-bar-left
-              %ul.horizontal.menu.dropdown{:'data-dropdown-menu' => ''}
-                %li= link_to 'Events', events_path
-                %li
-                  = link_to 'Projects', '/projects'
-                %li= link_to 'Residency', project_path('ars-bioarctica')
 
-                -# %ul.menu
-                -# %li= link_to 'Activities', activities_path
-                %li= link_to 'About', '/about'
-                %li= link_to fa_icon("calendar"), '#', onclick: 'javascript:toggleCalendar();return false;', class: :calendar_menu
-                %li.search.hide-for-small-only
-                  = form_tag '/search' do
-                    = text_field_tag :searchterm, params[:searchterm], placeholder: 'Search', style: @project.nil? ? '' : "background: #{asset_url('bioart/images/layout/mag_glass.png')} no-repeat 2px center  #{@project.custom_background_colour.blank? ? '#66ffcc' : @project.custom_background_colour};"
-                -#%li= link_to 'Contact', page_path('contact')
+          -# .search_icon.show-for-small-only
+          -# = link_to fa_icon('search'), '#', onclick: '$("#search_field_container").slideToggle();$(".search_icon").fadeOut();'
+        .title-bar{:'data-responsive-toggle' => 'top_menu', :'data-hide-for' => 'large'}
+          %button.menu-icon{type: 'button', :'data-toggle' => 'top_menu'}
+        .top-bar#top_menu
+          .top-bar-left
+            %ul.horizontal.menu
+              %li.menu-text.show-for-large= link_to image_tag(asset_url('bioart/images/solu_bioart.png')), '/'
+              %li= link_to 'Events', events_path
+              %li= link_to 'Projects', projects_path
+              %li= link_to 'Residency', project_path('ars-bioarctica')
+              %li= link_to 'About', '/about'
+              %li= link_to fa_icon("calendar"), '#', onclick: 'javascript:toggleCalendar();return false;', class: :calendar_menu
+              %li.search
+                = form_tag '/search' do
+                  = text_field_tag :searchterm, params[:searchterm], placeholder: 'Search', style: @project.nil? ? '' : "background: #{asset_url('bioart/images/layout/mag_glass.png')} no-repeat 2px center  #{@project.custom_background_colour.blank? ? '#66ffcc' : @project.custom_background_colour};"
+
     - unless flash.empty?
       #flash
         .row
