--- a/app/views/themes/bioart/admin/partners/index.html.haml
+++ b/app/views/themes/bioart/admin/partners/index.html.haml
@@ -1,7 +1,9 @@
 .row
   .small-12.columns
     %h1 Funders and partners
-
+.row
+  .small-12.columns
+    = link_to 'New Partner', new_admin_partner_path, class: [:button, :small]
     %table
       %thead
         %tr
